--- a/custom_components/xchfut_electricity_monitor/manifest.json
+++ b/custom_components/xchfut_electricity_monitor/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "xchfut_electricity_monitor",
   "name": "XCHFUT Electricity Monitor",
+  "version": "0.1.1",
   "config_flow": true,
   "documentation": "",
   "requirements": ["aiohttp"],
